{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 20,
  "lineage": "b64342f1-931b-dc07-25c2-f4997fa95e87",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/networkInterfaces/ew-BabiesFirstNIC",
            "internal_domain_name_suffix": "jufwe0zsi45ujisceystkcm04a.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "LAN",
                "primary": true,
                "private_ip_address": "10.69.69.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/publicIPAddresses/ew-BabiesFirstPIP",
                "subnet_id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/virtualNetworks/ew-BabiesFirstvNet/subnets/ew-BabiesFirstSubnet"
              }
            ],
            "location": "australiaeast",
            "mac_address": "00-0D-3A-D0-5A-E9",
            "name": "ew-BabiesFirstNIC",
            "private_ip_address": "10.69.69.4",
            "private_ip_addresses": [
              "10.69.69.4"
            ],
            "resource_group_name": "ew-BabiesFirstResourceGroup",
            "virtual_machine_id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Compute/virtualMachines/ew-BabiesFirstVM"
          },
          "dependencies": [
            "azurerm_public_ip.pip1",
            "azurerm_resource_group.resourcegroup1",
            "azurerm_subnet.BabiesFirstSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/networkSecurityGroups/ew-BabiesFirstNSG",
            "location": "australiaeast",
            "name": "ew-BabiesFirstNSG",
            "resource_group_name": "ew-BabiesFirstResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow SSH",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resourcegroup1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgrule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/networkSecurityGroups/ew-BabiesFirstNSG/securityRules/Allow SSH",
            "name": "Allow SSH",
            "network_security_group_name": "ew-BabiesFirstNSG",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "ew-BabiesFirstResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.resourcegroup1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/publicIPAddresses/ew-BabiesFirstPIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "ew-BabiesFirstPIP",
            "resource_group_name": "ew-BabiesFirstResourceGroup",
            "sku": "Basic",
            "tags": {
              "evironment": "ew-Test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "BabiesFirstSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.69.69.0/24",
            "address_prefixes": [
              "10.69.69.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/virtualNetworks/ew-BabiesFirstvNet/subnets/ew-BabiesFirstSubnet",
            "name": "ew-BabiesFirstSubnet",
            "resource_group_name": "ew-BabiesFirstResourceGroup",
            "virtual_network_name": "ew-BabiesFirstvNet"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup1",
            "azurerm_virtual_network.BabiesFirstvNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg1association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/virtualNetworks/ew-BabiesFirstvNet/subnets/ew-BabiesFirstSubnet",
            "network_security_group_id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/networkSecurityGroups/ew-BabiesFirstNSG",
            "subnet_id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/virtualNetworks/ew-BabiesFirstvNet/subnets/ew-BabiesFirstSubnet"
          },
          "dependencies": [
            "azurerm_subnet.BabiesFirstSubnet",
            "azurerm_virtual_network.BabiesFirstvNet",
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.resourcegroup1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "BabiesFirstvNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.69.0.0/16"
            ],
            "dns_servers": [
              "8.8.8.8",
              "1.1.1.1"
            ],
            "guid": "6b620b4d-4732-44bf-a242-262535099af0",
            "id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/virtualNetworks/ew-BabiesFirstvNet",
            "location": "australiaeast",
            "name": "ew-BabiesFirstvNet",
            "resource_group_name": "ew-BabiesFirstResourceGroup",
            "subnet": [
              {
                "address_prefix": "10.69.69.0/24",
                "id": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/virtualNetworks/ew-BabiesFirstvNet/subnets/ew-BabiesFirstSubnet",
                "name": "ew-BabiesFirstSubnet",
                "security_group": "/subscriptions/eb71c486-b02c-4a0c-97ed-1526d49e914f/resourceGroups/ew-BabiesFirstResourceGroup/providers/Microsoft.Network/networkSecurityGroups/ew-BabiesFirstNSG"
              }
            ],
            "tags": {
              "evironment": "ew-Test"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup1"
          ]
        }
      ]
    }
  ]
}